--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.18.12",
+    "gatsby": "^4.2.0",
     "gatsby-plugin-manifest": "^2.2.34",
     "gatsby-plugin-netlify-cms": "^4.1.33",
     "gatsby-plugin-offline": "^3.0.30",
@@ -22,6 +22,7 @@
     "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-react-svg": "^2.1.2",
+    "gatsby-react-router-scroll": "^5.2.0",
     "gatsby-source-filesystem": "^2.1.43",
     "gatsby-transformer-json": "^2.2.22",
     "netlify-cms-app": "^2.10.1",
